# marlin-kids

./: CMakeLists.txt  README.md
.github/workflows/: ccpp.yml  push-build.yml
app/: ArrayViewController.h  ArrayViewController.mm  CMakeLists.txt  ColorViewController.h  ColorViewController.mm  Document.h  Document.mm  DocumentImpl.h  DrawContext.h  DrawContext.mm  DrawHelper.h  DuplicateSourceLabel.h  DuplicateSourceLabel.mm  DuplicateSourceTextField.h  DuplicateSourceTextField.mm  DuplicateSourceView.h  DuplicateSourceView.mm  DuplicateViewController.h  DuplicateViewController.mm  EditorViewController.h  EditorViewController.mm  ExecuteViewController.h  ExecuteViewController.mm  Formatter.h  Formatter.mm  FunctionViewController.h  FunctionViewController.mm  LineNumberView.h  LineNumberView.mm  MessageViewController.h  MessageViewController.mm  NSData+DataView.h  NSString+StringView.h  NSString+StringView.mm  NativeFuncUtils.h  Pasteboard.h  SourceView.h  SourceView.mm  SourceViewController.h  SourceViewController.mm  (+8 more)
app/ios/: Document.h  Document.mm  DocumentBrowserViewController.mm  Info.plist  IosDocument.h  IosDocument.mm  IosEditorViewController.h  IosEditorViewController.mm  IosSourceView.h  IosSourceView.mm  IosSourceViewController.h  IosSourceViewController.mm  IosToolboxViewController.h  IosToolboxViewController.mm  SourceView.h  SourceView.mm  SourceViewController.mm  SplitViewController.h  SplitViewController.mm  ToolboxCell.h  ToolboxCell.mm  ToolboxHeaderView.h  ToolboxHeaderView.mm
app/ios/Base.lproj/: Main.storyboard
app/mac/: AppDelegate.mm  ColorWell.h  ColorWell.mm  Document.h  Document.mm  DrawContext.mm  EditorViewController.h  EditorViewController.mm  ExecuteViewController.h  Info.plist  LineNumberView.h  MacArrayViewController.h  MacArrayViewController.mm  MacColorViewController.h  MacColorViewController.mm  MacDocument.h  MacDocument.mm  MacDuplicateSourceLabel.h  MacDuplicateSourceLabel.mm  MacDuplicateSourceTextField.h  MacDuplicateSourceTextField.mm  MacEditorViewController.h  MacEditorViewController.mm  MacFunctionViewController.h  MacFunctionViewController.mm  MacLineNumberView.h  MacLineNumberView.mm  MacSourceView.h  MacSourceView.mm  MacSourceViewController.h  MacSourceViewController.mm  MacToolboxViewController.h  MacToolboxViewController.mm  MessageViewController.h  ParameterItem.h  ParameterItem.mm  ParameterItem.xib  Pasteboard.h  SourceTextView.h  SourceViewController.mm  (+13 more)
app/mac/Base.lproj/: Main.storyboard
cmake/: ios.toolchain.cmake  jscutils.cmake
core/: CMakeLists.txt  document.hpp  source.hpp
core/ast/: CMakeLists.txt  ast.cpp  ast.hpp  ast.impl.hpp  base.cpp  base.hpp  base.impl.hpp  base.inc.hpp  function_definition.hpp  node.cpp  node.hpp  specs.hpp  subnode_views.hpp  subnodes.hpp  utils.hpp
core/control/: CMakeLists.txt  color_literal.hpp  document.hpp  exec_env.hpp  expr_inserter.cpp  expr_inserter.hpp  expression_inserter.cpp  expression_inserter.hpp  line_inserter.cpp  line_inserter.hpp  literal_content.hpp  logo_sketcher.hpp  native_func_utils.hpp  placeholders.hpp  proto_gen.hpp  prototype_definition.hpp  prototypes.cpp  prototypes.hpp  source.hpp  source_inserters.hpp  source_modifications.hpp  source_selection.cpp  source_selection.hpp  source_update.hpp  statement_inserter.cpp  statement_inserter.hpp  toolbox.cpp  toolbox.hpp  toolbox_model.hpp  user_function.hpp
core/exec/: CMakeLists.txt  environment.hpp  errors.hpp  exec_errors.hpp  generator.hpp  stacktrace.cpp  stacktrace.hpp  standard_lib.hpp
core/format/: CMakeLists.txt  formatter.hpp
core/store/: CMakeLists.txt  byte_span.hpp  store.cpp  store.hpp  store_definition.hpp  store_errors.hpp  v1_store.hpp
ios/: AppDelegate.mm  CMakeLists.txt  Document.h  Document.mm  DocumentBrowserViewController.h  DocumentBrowserViewController.mm  DocumentViewController.h  DocumentViewController.mm  Info.plist  SourceViewController.h  SourceViewController.mm
ios/Base.lproj/: Main.storyboard
mac/: CMakeLists.txt  Document.h  Document.mm  DrawContext.h  DrawContext.mm  EditorViewController.h  EditorViewController.mm  ExecuteViewController.h  ExecuteViewController.mm  Info.plist  LineNumberView.h  LineNumberView.mm  NSData+DataView.h  NSData+DataView.mm  NSString+StringView.h  NSString+StringView.mm  SourceTextView.h  SourceTextView.mm  SourceTheme.h  SourceTheme.mm  SourceViewController.h  SourceViewController.mm  ToolBoxHeaderView.h  ToolBoxItem.xib  ToolBoxViewItem.m
mac/Base.lproj/: Main.storyboard
test/: CMakeLists.txt  array_tests.cpp  color_tests.cpp  document_tests.cpp  inserter_tests.cpp  removal_tests.cpp  store_tests.cpp
